[project]
name = "langboard"
version = "0.1.0"
description = ""
authors = [
    { name = "Yamon", email = "battlecruser@yamon.io" }
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.119.1,<0.200.0",
    "pydantic>=2.11.7,<2.20.0",
    "python-multipart>=0.0.20,<0.1.0",
    "sqlalchemy>=2.0.41,<2.0.50",
    "alembic>=1.16.2",
    "sqlmodel>=0.0.24",
    "bcrypt<=5.0.0",
    "cryptocode>=0.1",
    "pyjwt>=2.10.1",
    "redis>=7.0.1",
    "rich>=14.2.0",
    "boto3>=1.40.61",
    "httpx>=0.28.1",
    "anyio>=4.11.0",
    "requests>=2.32.5",
    "celery>=5.5.3",
    "fastapi-mail<=1.5.0",
    "sentry-sdk[fastapi]>=2.43.0",
    "genson>=1.3.0",
    "argcomplete>=3.6.3",
    "inflect>=7.5.0",
    "pyyaml>=6.0.3",
    "python-crontab>=3.3.0",
    "psutil>=7.1.2",
    "uvicorn>=0.38.0",
    "psycopg[binary]>=3.2.12",
    "kafka-python>=2.2.15",
]


[dependency-groups]
dev = [
    "ruff>=0.9.7,<0.10",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "boto3-stubs[s3]>=1.40.61",
]


[tool.uv]
link-mode = "copy"


[tool.uv.sources]
langboard-shared = { path = "./src/shared/py/langboard_shared" }
langboard = { workspace = true }


[tool.uv.workspace]
members = ["."]


[tool.hatch.build.targets.wheel]
packages = ["langboard"]


[project.scripts]
langboard = "langboard.CLI:execute"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["Test*.py"]
console_output_style = "progress"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning", "ignore::ResourceWarning"]
log_cli = true
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[tool.coverage.report]
omit = [
    "**/__init__.py",
]


[tool.ruff]
line-length = 120
lint.extend-select = ["I"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.ruff.lint.isort]
lines-after-imports = 2
no-lines-before = ["future", "standard-library", "third-party", "first-party", "local-folder"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
