[project]
name = "langboard"
version = "0.1.0"
description = ""
authors = [
    { name = "Yamon", email = "battlecruser@yamon.io" }
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.13"
dependencies = [
    "langboard-shared",
]


[dependency-groups]
dev = []


[tool.uv]
link-mode = "copy"


[tool.uv.sources]
langboard-shared = { path = "./src/shared/py", editable = true }
langboard = { workspace = true }


[tool.uv.workspace]
members = ["."]


[tool.hatch.build.targets.wheel]
packages = ["./src/api/langboard"]


[project.scripts]
langboard = "langboard.CLI:execute"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["Test*.py"]
console_output_style = "progress"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning", "ignore::ResourceWarning"]
log_cli = true
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[tool.coverage.report]
omit = [
    "**/__init__.py",
]


[tool.ruff]
line-length = 120
lint.extend-select = ["I"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.ruff.lint.isort]
lines-after-imports = 2
no-lines-before = ["future", "standard-library", "third-party", "first-party", "local-folder"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
