[project]
name = "langboard-flows"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<3.13"
dependencies = [
    "langboard-shared",
    "langflow>=1.5.0,<2.0.0",
]


[dependency-groups]
dev = []


[tool.uv]
link-mode = "copy"


[tool.uv.sources]
langboard-shared = { path = "../shared/py", editable = true }
langboard-flows = { workspace = true }


[tool.uv.workspace]
members = ["."]


[tool.hatch.build.targets.wheel]
packages = ["langboard_flows"]


[project.scripts]
flows = "langboard_flows.CLI:execute"


[tool.ruff]
line-length = 120
lint.extend-select = ["I"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.ruff.lint.isort]
lines-after-imports = 2
no-lines-before = ["future", "standard-library", "third-party", "first-party", "local-folder"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
