[project]
name = "langboard-shared"
version = "0.1.0"
description = ""
requires-python = ">=3.11, <3.13"
dependencies = [
    "alembic>=1.16.2",
    "anyio>=4.11.0",
    "argcomplete>=3.6.3",
    "bcrypt<=5.0.0",
    "boto3>=1.40.61",
    "celery>=5.5.3",
    "cryptocode>=0.1",
    "fastapi>=0.119.1,<0.200.0",
    "fastapi-mail<=1.5.0",
    "genson>=1.3.0",
    "httpx>=0.28.1",
    "inflect>=7.5.0",
    "kafka-python>=2.2.15",
    "psutil>=7.1.2",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.10.0,<2.20.0",
    "pyjwt>=2.10.1",
    "python-crontab>=3.3.0",
    "python-multipart>=0.0.20,<0.1.0",
    "sqlalchemy>=2.0.41,<2.0.50",
    "pyyaml>=6.0.3",
    "redis>=5.2.1,<6.0.0",
    "requests>=2.32.5",
    "rich<=14.2.0",
    "sentry-sdk[fastapi]>=2.43.0",
    "sqlmodel<=0.0.24",
    "uvicorn>=0.38.0",
]


[dependency-groups]
dev = [
    "ruff>=0.9.7,<0.10",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "boto3-stubs[s3]>=1.40.61",
]


[tool.uv]
link-mode = "copy"


[tool.uv.sources]
langboard-shared = { workspace = true }


[tool.uv.workspace]
members = ["."]


[tool.hatch.build.targets.wheel]
packages = ["langboard_shared"]


[tool.ruff]
line-length = 120
lint.extend-select = ["I"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.ruff.lint.isort]
lines-after-imports = 2
no-lines-before = ["future", "standard-library", "third-party", "first-party", "local-folder"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
